feature/random api
